--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 title: Tonyhdz24's homepage
-description: My fisrt Github pages site
+description: My First Github pages site created for CS155
